--- a/sample.env
+++ b/sample.env
@@ -10,7 +10,7 @@ DB_URL=mongodb://localhost/acnhtrading
 
 
 ## Server Port
-PORT=3000
+API_SERVER_PORT=3000
 
 ## Enable CORS (default: true)
 # ENABLE_CORS=false
